Fix and Match Front End Connection